SUBDIRS=meshes/2D/Geo-Files meshes/3D/Geo-Files images
EXTRA_DIST=   	      \
./meshes/2D/Geo-Files/bar.geo \
./meshes/2D/Geo-Files/bar-dynamic.geo \
./meshes/2D/Geo-Files/Notched-Plate.geo \
./meshes/2D/Geo-Files/sparsity.geo\
./meshes/2D/Geo-Files/tensile-crack.geo\
./meshes/3D/Geo-Files/bar.geo\
./meshes/3D/Geo-Files/tensile-crack.geo\
./meshes/3D/Geo-Files/bar-dynamic.geo\
./images/markdownimage.png

